# coalresearch

./: .gitignore  README.md  Sample db - company_directory.csv  Sample db - company_performance.csv  Sample db - mining_site.csv  alter_db.ipynb  alter_db.py  cleanse_turso.py  coal-db - Copy.sqlite  coal-db.sqlite  coal_companies.csv  coal_company_performance_update.ipynb  coal_db - minerba.csv  coal_db.sqlite  commodity_gold_silver.py  commodity_report.py  companies.csv  company_group.csv  company_update.ipynb  db.ipynb  db.py  db.sqlite  google_sheet_auth.py  indonesia_mining_industries.xlsx  listed_mining_sites.geojson  migrate_schema.py  mineral_company_report.py  minerba_commodities_scraper.py  minerba_commodities_scraper_requirements.txt  minerba_merge.py  mining_license_auctions_scraper.py  mining_site_merge.py  mining_site_update.ipynb  pyproject.toml  queries.sql  read_db-sqlite.py  read_db.py  read_turso.py  sheet_db.py  sheet_db2.py  (+3 more)
datasets/: copper.csv  modi dataPerusahaan name link.csv  nickel.csv  primary_gold - ESDM.csv
insider_news/: requirements.txt
keys/: supertype-insider-d4710ac3561a.json
scrapper/: apni_members.py  esdm_minerba.py  esdm_minerba_gold.py  iup_nickel.py  modi.py  sort_mining_license.py
scripts/: cleanse_coal_db-minerba.py  company_performance_restructure.py  fuzzy_matcher.py  mining_site_merge.py  modi_preprocess.py  product_merge.py  reorder_company.py  set_company_group.py  sync_company_name_id.py
sheet_api/: auto_link_site_name.py  coal-db.sqlite  coal_db - ESDM_coal.csv  coal_product_merge.py  company_financials.py  company_performance_restructure.py  compile_to_json.py  extract_from_db.py  global_commodity_data_merge.py  init_db.py  insert_data_scraped.py  insert_site_name_scraped.py  link_site_name.py  migrate_mining_contracts_to_gsheet.py  minerba_merge.py  minerba_to_db.ipynb  mining_site_merge.py  product_merge.py  sales_destination.py  sheet_db2.py  sheet_db3.py  sheet_db4.py  (+4 more)
(+44 files in other folders)
