[project]
name = "mining-industries-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.170.0",
    "google-auth>=2.39.0",
    "gspread>=6.2.0",
    "jupyterlab>=4.4.1",
    "pandas>=2.2.3",
    "peewee>=3.17.9",
    "tabulate>=0.9.0",
    "RapidFuzz==3.13.0",
    "shapely==2.1.1", 
    "pyproj==3.7.1", 
    "geopandas==1.1.0",
    "beautifulsoup4==4.13.4", 
    "dateparser==1.2.2", 
    "load-dotenv==0.1.0"
]
